--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <form action="procesar.php" method="get">
-<p>Nombre:<input type="text" name="nombre"/></p>
+<p>Nombre miho:<input type="text" name="nombre"/></p>
 <p>Asunto:<input type="text" name="asunto"/></p>
 <p>Mensaje:<input type="text" name="mensaje"/></p>
 <p><input type="submit" value="Enviar" /></p>
